2009-10-06  Uwe Kindler  <uwe_kindler@web.de>

	* include/cyg_type.h: Changed definition of macro
	CYG_REFERENCE_OBJECT according to proposal of Bart Veer on
	ecos-discuss mailing list.
	
2009-02-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/cxxsupp.cxx (cyg_start): Only test 'new' with ARM tools after
	3.2.x since up to that point the compiler generates references from
	the libsupc++ new implementation to .gcc_except_table, which is
	discarded. This is specific to ARM for now as that's all it has
	been reported against, but it's possible it may apply to other
	targets.

2009-02-04  Bart Veer  <bartv@ecoscentric.com>

	* include/cyg_type.h: add new static initialization priorities.
	Add macros to support static initialization from C as well as C++.

2009-01-26  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/diag_sprintf1.c: Rename main() to cyg_user_start so this
	works in all configs.
	* tests/diag_sprintf2.c: Ditto.

2008-10-02  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/gccsupport.cxx (fwrite, fputc): New functions since GCC can
	now optimise certain builtins used by the libsupc++ runtime to
	these.

2008-07-10  Grant Edwards <grant.b.edwards@gmail.com>

        * src/diag.cxx: allow ASCII escape character in printf
        format strings.

2008-01-10  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/infra.cdl (CYGFUN_INFRA_EMPTY_DELETE_FUNCTIONS): Escape square
	brackets in description.	

2007-12-28  Oyvind Harboe <oyvind.harboe@zylin.com>
	
	* src/memcpy.cxx: added assert when memory areas for memcpy()
	overlaps => result is undefined. It is important to catch *all*
	cases of this if adding an optimisation for unaligned copy.
	
2007-06-28  Gary Thomas  <gary@mlbassoc.com>

	* src/tcdiag.cxx: 
	* src/diag.cxx: Add (char *) casts to make GCC 4.2.x happy.

2007-05-31  Rutger Hofman <rutger@cs.vu.nl>

	* src/diag.cxx: when printing a long long, should not truncate
	its value to a long or int size
